--- a/index.html
+++ b/index.html
@@ -210,10 +210,19 @@ body {
     padding-bottom: 8px;
   }
 }
+
+.version {
+  position: fixed;
+  bottom: 4px;
+  right: 6px;
+  font-size: 10px;
+  color: #444;
+}
 </style>
 </head>
 <body>
 
+<div class="version">v1.3</div>
 <div class="game-wrapper">
   <div class="side-panel">
     <div class="panel-box">
