--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
 body {
-  background: #1a1a2e;
+  background: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,7 +222,7 @@ body {
 </head>
 <body>
 
-<div class="version">v1.3</div>
+<div class="version">v1.4</div>
 <div class="game-wrapper">
   <div class="side-panel">
     <div class="panel-box">
